gulp-inline-source, htmlsplit, gulp-line-ending-corrector 패키지 추가

--- a/src/test-event/test-event.html
+++ b/src/test-event/test-event.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" inline>
-</head>
+<html lang="ko">
+<%- include("../_layouts/inc_head.html") %>
 <body>
+    <!-- split new_event.txt -->
+    <link rel="stylesheet" href="style.css" inline>
+
     <div class="wrap test-event">
         this is how we do!
     </div>
 
     <script src="test-event.js" inline></script>
+    <!-- split stop -->
 </body>
 </html>
 
